--- a/index.html
+++ b/index.html
@@ -21,7 +21,24 @@
   </div>
 </header>
 
-<div class="banner">🎀 Huge Sale! Up to 40% OFF on New Arrivals! 🎀</div>
+<!-- CART BUTTON -->
+<button class="cart-btn" onclick="openCart()">🛒 Cart (<span id="cartCount">0</span>)</button>
+
+<!-- CART SIDEBAR -->
+<div id="cartSidebar">
+  <div class="cart-header">
+    Your Cart
+    <button class="cart-close" onclick="closeCart()">✕</button>
+  </div>
+
+  <div id="cartItems"></div>
+  <br>
+  <button class="btn" onclick="checkoutWhatsApp()">Order via WhatsApp</button>
+</div>
+
+<div class="banner">
+  <span>🎀 Huge Sale! Up to 40% OFF on New Arrivals! 🎀</span>
+</div>
 
 <!-- WOMEN SECTION -->
 <section id="women" class="section container">
@@ -29,28 +46,35 @@
   <div class="carousel-wrapper">
     <button class="arrow left" onclick="scrollLeftDiv('womenTrack')">❮</button>
     <div class="carousel" id="womenTrack">
+      <script>
+      const womenImgs = [
+      "images/w_1.webp",
+      "images/w_2.webp",
+      "images/w_3.webp",
+      "images/w_4.webp",
+      "images/w_5.webp"
+      ];
 
-<script>
-const womenImgs = [
-"https://m.media-amazon.com/images/I/71KcUgYanhL._UY741_.jpg",
-"https://m.media-amazon.com/images/I/61gY2oJ7qTL._UY741_.jpg",
-"https://m.media-amazon.com/images/I/61f7l9m9FSL._UX679_.jpg",
-"https://m.media-amazon.com/images/I/71ZkO+5u6OL._UX679_.jpg",
-"https://m.media-amazon.com/images/I/71HblAHs5xL._UY741_.jpg"
-];
-for (let i = 1; i <= 20; i++) {
-  let img = womenImgs[i % womenImgs.length];
-  document.write(`
-    <div class="card">
-      <img src="${img}">
-      <h4>Women Dress ${i}</h4>
-      <div class="price">₹${599 + i*10}</div>
-      <button class="btn" onclick="selectItem('Women Dress ${i}', '₹${599 + i*10}')">Shop Now</button>
-    </div>
-  `);
-}
-</script>
-
+       const womenPrice = [
+      "2500",
+      "3000",
+      "3250",
+      "2000",
+      "6000"
+      ];
+      for (let i = 1; i <= 20; i++) {
+        let img = womenImgs[i % womenImgs.length];
+        let price = womenPrice[i % womenImgs.length];
+        document.write(`
+          <div class="card">
+            <img src="${img}" onclick="openImg(this.src)">
+            <h4>Women Dress ${i}</h4>
+            <div class="price">₹${price}</div>
+            <button class="btn" onclick="addToCart('Women Dress ${i}', ${price}, 'JF-W-0${i}')">Add to Cart</button>
+          </div>
+        `);
+      }
+      </script>
     </div>
     <button class="arrow right" onclick="scrollRightDiv('womenTrack')">❯</button>
   </div>
@@ -65,20 +89,20 @@ for (let i = 1; i <= 20; i++) {
 
 <script>
 const kidImgs = [
-"https://m.media-amazon.com/images/I/71kqg5Z9pEL._UY741_.jpg",
-"https://m.media-amazon.com/images/I/6100r8GVMqL._UX679_.jpg",
-"https://m.media-amazon.com/images/I/61De0g0+zHL._UX679_.jpg",
-"https://m.media-amazon.com/images/I/61Z6DXYGyuL._UX679_.jpg",
-"https://m.media-amazon.com/images/I/71h6Q8QdGKL._UY741_.jpg"
+"images/1.avif",
+"images/2.avif",
+"images/3.avif",
+"images/4.avif",
+"images/5.avif"
 ];
 for (let i = 1; i <= 20; i++) {
   let img = kidImgs[i % kidImgs.length];
   document.write(`
     <div class="card">
-      <img src="${img}">
+      <img src="${img}" onclick="openImg(this.src)">
       <h4>Kids Dress ${i}</h4>
       <div class="price">₹${499 + i*10}</div>
-      <button class="btn" onclick="selectItem('Kids Dress ${i}', '₹${499 + i*10}')">Shop Now</button>
+      <button class="btn" onclick="addToCart('Kids Dress ${i}', ${599+i*10}, 'JF-W-0${i}')">Add to Cart</button>
     </div>
   `);
 }
@@ -114,31 +138,115 @@ for (let i = 1; i <= 20; i++) {
   <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
 </div>
 
+<!-- IMAGE POPUP LIGHTBOX -->
+<div id="imgView" onclick="closeImg()">
+  <img id="imgFull">
+</div>
+
+<!-- CART SCRIPT -->
 <script>
-let selectedProduct = "None";
+let cart = [];
 
-function selectItem(name, price) {
-  selectedProduct = name + " - " + price;
-  alert("✅ Selected: " + selectedProduct + "\nNow click WhatsApp to Order");
-}
-
-function openWhatsApp() {
-  if (selectedProduct === "None") {
-    alert("Please select a product first");
-    return;
+  // Close image popup on ESC key press
+document.addEventListener("keydown", function(event) {
+    if (event.key == "Escape") {
+       closeImg();
   }
-  const phone = "919876543210"; // Replace with your number
-  const msg = "Hi, I'm interested in " + selectedProduct + " from Janya Fashions.";
-  window.open("https://wa.me/" + phone + "?text=" + encodeURIComponent(msg), "_blank");
+});
+
+function addToCart(name, price, code) {
+  cart.push({name, price, code});
+  updateCartUI();
 }
+
+function removeFromCart(index) {
+  cart.splice(index, 1);
+  updateCartUI();
+}
+
+function updateCartUI() {
+  document.getElementById("cartCount").innerText = cart.length;
+
+  const cartBox = document.getElementById("cartItems");
+  cartBox.innerHTML = "";
+
+  let total = 0; // ✅ to calculate total amount
+
+  cart.forEach((item, i) => {
+    total += item.price; // ✅ add item price to total
+
+    cartBox.innerHTML += `
+      <div class="cart-item">
+        <b>${item.name}</b> <br>
+        💰 ₹${item.price} <br>
+        🏷 ${item.code} <br>
+        <button class="remove-btn" onclick="removeFromCart(${i})">Remove</button>
+      </div>
+    `;
+  });
+
+  // ✅ show total amount in cart
+  cartBox.innerHTML += `
+    <div style="margin-top:10px; padding:8px; font-weight:bold; background:#ffe6f0; border-radius:6px;">
+      Total Amount: ₹${total}
+    </div>
+  `;
+}
+
+function openCart() {
+  document.getElementById("cartSidebar").classList.add("open");
+}
+function closeCart() {
+  document.getElementById("cartSidebar").classList.remove("open");
+}
+
 
 function scrollLeftDiv(id) {
   document.getElementById(id).scrollBy({ left: -260, behavior: "smooth" });
 }
+
 function scrollRightDiv(id) {
   document.getElementById(id).scrollBy({ left: 260, behavior: "smooth" });
 }
+
+function openImg(src) {
+  document.getElementById("imgView").style.display = "flex";
+  document.getElementById("imgFull").src = src;
+}
+
+function closeImg() {
+  document.getElementById("imgView").style.display = "none";
+}
+
+  let message = "Hi, I want to order:\n\n";
+  cart.forEach(c => {
+    message += `🛍 ${c.name}\n₹${c.price}  |  ${c.code}\n\n`;
+  });
+
+  function checkoutWhatsApp() {
+  if(cart.length === 0) {
+    alert("Cart is empty!");
+    return;
+  }
+
+  let message = "Hi, I want to order:\n\n";
+  let total = 0;
+
+  cart.forEach(c => {
+    message += `🛍 ${c.name}\n💰 ₹${c.price}\n🏷 ${c.code}\n\n`;
+    total += c.price;
+  });
+
+  message += `✅ Total Amount: ₹${total}\n\nPlease confirm the order.`;
+
+  let phone = "919876543210"; // ✅ replace with your number
+  let url = `https://wa.me/${phone}?text=` + encodeURIComponent(message);
+  window.open(url, "_blank");
+}
+
 </script>
+
+
 
 </body>
 </html>
