--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
 
 <header class="top-header">
   <div class="header-container">
+
+    <!-- Logo (Text for now, can replace with image later) -->
     <div class="brand-name">Janya Fashions</div>
-    <div class="nav-links">
+
+    <!-- Hamburger icon for mobile -->
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+
+    <!-- Navigation links -->
+    <nav class="nav-links" id="navMenu">
       <a href="#women">Women</a>
       <a href="#kids">Kids</a>
       <a href="#reviews">Reviews</a>
       <a href="#insta">Instagram</a>
       <a href="#contact">Contact</a>
-    </div>
+    </nav>
+
   </div>
 </header>
 
@@ -44,7 +52,6 @@
 <section id="women" class="section container">
   <h2>Women Collection</h2>
   <div class="carousel-wrapper">
-    <button class="arrow left" onclick="scrollLeftDiv('womenTrack')">❮</button>
     <div class="carousel" id="womenTrack">
       <script>
       const womenImgs = [
@@ -76,7 +83,6 @@
       }
       </script>
     </div>
-    <button class="arrow right" onclick="scrollRightDiv('womenTrack')">❯</button>
   </div>
 </section>
 
@@ -84,7 +90,6 @@
 <section id="kids" class="section container">
   <h2>Kids Collection</h2>
   <div class="carousel-wrapper">
-    <button class="arrow left" onclick="scrollLeftDiv('kidsTrack')">❮</button>
     <div class="carousel" id="kidsTrack">
 
 <script>
@@ -109,7 +114,6 @@ for (let i = 1; i <= 20; i++) {
 </script>
 
     </div>
-    <button class="arrow right" onclick="scrollRightDiv('kidsTrack')">❯</button>
   </div>
 </section>
 
@@ -126,10 +130,19 @@ for (let i = 1; i <= 20; i++) {
 
 <section id="contact" class="section container">
   <h2>Contact Us</h2>
-  <input type="text" placeholder="Your Name">
-  <input type="email" placeholder="Your Email">
-  <textarea placeholder="Your Message"></textarea>
-  <button class="btn">Send Message</button>
+
+  <form action="https://api.web3forms.com/submit" method="POST">
+
+    <!-- ✅ Replace with your email service key (I will give you in Step 2) -->
+    <input type="hidden" name="access_key" value="c51b4242-3c4e-4ed1-9f2f-016552c185f9">
+
+    <input type="text" name="name" placeholder="Your name" required><br>
+    <input type="email" name="email" placeholder="Your email" required><br>
+    <textarea name="message" placeholder="Message" required></textarea><br>
+
+    <button type="submit" class="btn">Send Message</button>
+  </form>
+
 </section>
 
 <footer>© 2025 Janya Fashions | Made with ❤️ for style</footer>
@@ -146,6 +159,10 @@ for (let i = 1; i <= 20; i++) {
 <!-- CART SCRIPT -->
 <script>
 let cart = [];
+
+function toggleMenu() {
+  document.getElementById("navMenu").classList.toggle("active");
+}
 
   // Close image popup on ESC key press
 document.addEventListener("keydown", function(event) {
