Update Women link to point to women.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Navigation links -->
     <nav class="nav-links" id="navMenu">
-      <a href="#women">Women</a>
+      <a href="women.html">Women</a>
       <a href="#kids">Kids</a>
       <a href="#reviews">Reviews</a>
       <a href="#insta">Instagram</a>
