--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <div class="header-container">
 
     <!-- Logo (Text for now, can replace with image later) -->
-    <div class="brand-name">Janya Fashions</div>
-
+     <h1 class="brand-name">
+    <span class="line1">Janya</span><br>
+    <span class="line2">Fashions</span>
+  </h1>
     <!-- Hamburger icon for mobile -->
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
 
