--- a/kids.html
+++ b/kids.html
@@ -12,7 +12,10 @@
   <div class="header-container">
 
     <!-- Logo (Text for now, can replace with image later) -->
-    <div class="brand-name">Janya Fashions</div>
+     <h1 class="brand-name">
+    <span class="line1">Janya</span><br>
+    <span class="line2">Fashions</span>
+  </h1>
 
     <!-- Hamburger icon for mobile -->
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
@@ -20,6 +23,7 @@
     <!-- Navigation links -->
     <nav class="nav-links" id="navMenu">
       <a href="index.html">Home</a>
+      <a href="women.html">Women</a>
     </nav>
 
   </div>
