--- a/women.html
+++ b/women.html
@@ -91,7 +91,19 @@
   </div>
 </section>
 
-<footer>© 2025 Janya Fashions | Made with ❤️ for style</footer>
+<footer>
+  <div class="footer-content">
+    <p>© 2025 Janya Fashions | Made with ❤️</p>
+    <div class="social-icons">
+      <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
+  </div>
+</footer>
 
 <div class="whatsapp-float" onclick="openWhatsApp()">
   <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
