--- a/kids.html
+++ b/kids.html
@@ -8,27 +8,31 @@
 </head>
 <body>
 
-<header class="top-header">
-  <div class="header-container">
+<header>
+  <div class="header-top-row">
 
-    <!-- Logo (Text for now, can replace with image later) -->
-     <h1 class="brand-name">
-    <span class="line1">Janya</span><br>
-    <span class="line2">Fashions</span>
-  </h1>
+    <!-- Menu icon (left) -->
+    <div class="menu-icon" onclick="toggleMenu()">☰</div>
 
-    <!-- Hamburger icon for mobile -->
-    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+     <nav id="smallMenu" class="small-menu">
+        <a href="index.html">Home</a>
+        <a href="women.html">Women</a>
+        <a href="kids.html">Kids</a>
+      </nav>
 
-    <!-- Navigation links -->
-    <nav class="nav-links" id="navMenu">
-      <a href="index.html">Home</a>
-      <a href="women.html">Women</a>
-    </nav>
-  <!-- CART BUTTON -->
-   <button class="cart-btn" onclick="toggleCart()">🛒 Cart (<span id="cartCount">0</span>)</button>
+    <!-- Brand name (center or left depending on your style) -->
+   <h1 class="brand-name">
+    Janya Fashions
+    </h1>
+
+    <!-- Cart button (RIGHT) -->
+    <button class="cart-btn-header" onclick="toggleCart()">
+      🛒 (<span id="cartCount">0</span>)
+    </button>
+
   </div>
 </header>
+
 
 <!-- CART SIDEBAR -->
 <div id="cartSidebar">
@@ -44,9 +48,13 @@
   <button class="btn" onclick="emptyCart()">Empty Cart</button>
 </div>
 
-<div class="banner">
-  <span>🎀 Huge Sale! Up to 40% OFF on New Arrivals! 🎀</span>
-</div>
+<!-- 🌸 Hero Section -->
+<section class="hero">
+  <div class="hero-content">
+    <h1>Kids</h1>
+    <p>Discover the latest trends in Women & Kids fashion — curated with elegance and comfort.</p>
+  </div>
+</section>
 
 <!-- KIDS SECTION -->
 <section id="kids" class="section container">
