font size change

--- a/kids.html
+++ b/kids.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Janya Fashions</title>
 <link rel="stylesheet" href="styles.css">
+<!-- CART SCRIPT -->
+<script src="script.js" ></script>
 </head>
 <body>
 
@@ -105,13 +107,16 @@ for (let i = 1; i <= 20; i++) {
   <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
 </div>
 
+<div class="top-button" onclick="scrollToTop()">
+  ⬆️
+</div>
+
 <!-- IMAGE POPUP LIGHTBOX -->
 <div id="imgView" onclick="closeImg()">
   <img id="imgFull">
 </div>
 
-<!-- CART SCRIPT -->
-<script src="script.js" ></script>
+
 
 </body>
 </html>
