--- a/kids.html
+++ b/kids.html
@@ -7,8 +7,13 @@
 <link rel="stylesheet" href="styles.css">
 <!-- CART SCRIPT -->
 <script src="script.js" ></script>
+<script src="cartscript.js" ></script>
 </head>
 <body>
+
+<div class="banner">
+  <span>🎀 Huge Sale! Up to 40% OFF on New Arrivals! 🎀</span>
+</div>
 
 <header>
   <div class="header-top-row">
@@ -26,12 +31,6 @@
    <h1 class="brand-name">
     Janya Fashions
     </h1>
-
-    <!-- Cart button (RIGHT) -->
-    <button class="cart-btn-header" onclick="toggleCart()">
-      🛒 (<span id="cartCount">0</span>)
-    </button>
-
   </div>
 </header>
 
@@ -43,7 +42,7 @@
     <button class="cart-close" onclick="closeCart()">✕</button>
   </div>
 
-  <div id="cartItems"></div>
+  <div id="cartItems" class="cart-items"></div>
   <br>
   <button class="btn" onclick="checkoutWhatsApp()">Order via WhatsApp</button>
   <br><br>
@@ -60,7 +59,6 @@
 
 <!-- KIDS SECTION -->
 <section id="kids" class="section container">
-  <h2>Kids Collection</h2>
   <div class="carousel-wrapper">
     <div class="carousel" id="kidsTrack">
 
@@ -76,10 +74,7 @@ for (let i = 1; i <= 20; i++) {
   let img = kidImgs[i % kidImgs.length];
   document.write(`
     <div class="card">
-      <img src="${img}" onclick="openImg(this.src)">
-      <h4>Kids Dress ${i}</h4>
-      <div class="price">₹${499 + i*10}</div>
-      <button class="btn" onclick="addToCart('Kids Dress ${i}', ${599+i*10}, 'JF-W-0${i}')">Add to Cart</button>
+      <img src="${img}"  class="product-img" onclick="openPreview('Kids Dress ${i}', ${499+i*10}, src)">
     </div>
   `);
 }
@@ -88,6 +83,38 @@ for (let i = 1; i <= 20; i++) {
    </div>
   </div>
 </section>
+
+
+<div class="whatsapp-float" onclick="openWhatsApp()">
+  <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
+</div>
+
+<div class="top-button" onclick="scrollToTop()">
+  ⟰
+</div>
+
+<!-- Floating Cart Button -->
+<div class="floating-cart" onclick="toggleCart()">
+  🛒
+  <span id="floatingCartCount" class="floating-cart-count">0</span>
+</div>
+
+<!-- PRODUCT PREVIEW POPUP -->
+<div id="previewPopup" class="preview-popup">
+  <div class="popup-content">
+    <span class="close-popup" onclick="closePreview()">&times;</span>
+
+    <img id="popupImage" class="popup-img" src="">
+
+    <h3 id="popupName"></h3>
+    <p id="popupPrice"></p>
+
+    <button class="popup-cart-btn" onclick="addPopupToCart()">
+      Add to Cart
+    </button>
+  </div>
+</div>
+
 
 <footer>
   <div class="footer-content">
@@ -102,21 +129,6 @@ for (let i = 1; i <= 20; i++) {
     </div>
   </div>
 </footer>
-
-<div class="whatsapp-float" onclick="openWhatsApp()">
-  <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
-</div>
-
-<div class="top-button" onclick="scrollToTop()">
-  ⬆️
-</div>
-
-<!-- IMAGE POPUP LIGHTBOX -->
-<div id="imgView" onclick="closeImg()">
-  <img id="imgFull">
-</div>
-
-
 
 </body>
 </html>
