Update image source path in index.html

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 </div>
 <div>
     {% for img in images %}
-        <img src="/static/images/{{ img }}" alt="{{ img }}">
+        <img src="/images/{{ img }}" alt="{{ img }}">
     {% endfor %}
 </div>
   
